[tool.poetry]
name = "streamlit-chatbot"
version = "0.1.0"
description = "A streaming chatbot using Streamlit and LangChain"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.22.0"
langchain = "^0.0.184"
openai = "^0.27.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"